[package]
name = "neutraltemplate"
version = "1.3.0-beta.2"
edition = "2021"

[lib]
name = "neutraltemplate"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26.0"
neutralts = "1.3.0-beta2"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# strip = true
# panic = "abort"
